@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-16T16:07:32Z",
+  "timestamp" : "2023-10-17T16:07:32Z",
   "count_outdated" : 286,
   "uniques_outdated" : 98,
-  "count" : 294,
-  "uniques" : 101,
+  "count" : 295,
+  "uniques" : 102,
   "views" : [
     {
       "timestamp": "2023-10-06T00:00:00Z",
@@ -19,6 +19,15 @@
       "count": 6,
       "count_minmax": [ 6, 6 ],
       "count_decinc": [ 0, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
