@@ -1,6 +1,6 @@
 {
-  "count": 8,
-  "uniques": 3,
+  "count": 9,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2023-10-06T00:00:00Z",
@@ -10,6 +10,11 @@
     {
       "timestamp": "2023-10-16T00:00:00Z",
       "count": 6,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-17T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
